spacing fixed

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@ ul.tags {
   border-radius: 24px;
   width: 82vw;
   padding: 0;
-  margin: 9vw 11vw 0 9vw;
+  margin: 9vw 11vw 0 11vw;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -154,7 +154,7 @@ ul.tags {
   border-radius: 24px;
   width: 82vw;
   padding: 0;
-  margin: 9vw 11vw 0 9vw;
+  margin: 9vw 11vw 0 11vw;
   display: flex;
   align-items: center;
   justify-content: center;
